shesmu-server/src/test/resources/bad/interpolation-boolean.shesmu
Define standard_execution()
  Where "{True}" != "";
